## -*- Makefile -*-
## Makefile.am for pygtkglext/examples

EXTRA_DIST = \
	gears-func.py		\
	gears-darea.py		\
	teapot.py		\
	SimpleScene.py		\
	MoveLight.py		\
	teapot2.py		\
	Shapes.py		\
	NeHe6Multi.py		\
	font.py			\
	low-level.py		\
	pixmap.py		\
	pixmap-mixed.py 	\
	simple.py		\
	simple-mixed.py	\
	color.py			\
	Wall.png			\
	NeHe.png

