## -*- Makefile -*-
## Makefile.am for pygtkglext/examples

EXTRA_DIST = \
	gears-func.py		\
	gears-darea.py		\
	teapot.py		\
	teapot2.py		\
	low-level.py		\
	simple.py		\
	simple-mixed.py		\
	pixmap.py		\
	pixmap-mixed.py 	\
	color.py		\
	font.py			\
	SimpleScene.py		\
	MoveLight.py		\
	Shapes.py		\
	share-lists.py     \
	NeHe6Multi.py		\
	Wall.png		\
	NeHe.png

