## -*- Makefile -*-
## Makefile.am for pygtkglext/examples

EXTRA_DIST = \
	gears-func.py		\
	gears-darea.py		\
	teapot.py		\
	teapot2.py		\
	low-level.py		\
	simple.py		\
	simple-mixed.py		\
	pixmap.py		\
	pixmap-mixed.py 	\
	share-lists.py		\
	color.py		\
	font.py			\
	SimpleScene.py		\
	MoveLight.py		\
	Shapes.py		\
	NeHe6Multi.py		\
	scribble-gl.py		\
	button.py		\
	scribble.py		\
	scribbling-worms.py	\
	coolwave.py		\
	Wall.png		\
	NeHe.png

